nodejs/ssl-app/k8s-manifest/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ssl-nodejs-app
  name: ssl-nodejs-app-svc
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 15022
      targetPort: 15022
  selector:
    app: ssl-nodejs-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-nodejs-app
spec:
  selector:
    matchLabels:
      app: ssl-nodejs-app
  template:
    metadata:
      labels:
        app: ssl-nodejs-app
    spec:
      containers:
        - name: controller
          image: abhioncbr/ssl-nodejs-app:0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 15022
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 15022
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
          - name: https
            containerPort: 15022
            protocol: TCP
          volumeMounts:
            - name: certs
              mountPath: /home/node/app/certs/
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 90Mi
            limits:
              cpu: 50m
              memory: 90Mi
      volumes:
        - name: certs
          secret:
            secretName: ssl-certs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: ssl-nodejs-app  
  name: ssl-nodejs-app-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - ssl-exmple.kind-clstr.com
  rules:
  - host: ssl-exmple.kind-clstr.com
    http:
      paths:
      - backend:
          serviceName: ssl-nodejs-app-svc
          servicePort: 15022
        path: /
